[package]
name = "ipfs-tsdb-rust"
version = "0.1.0"
authors = ["Shawn Rutledge <s@ecloud.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ipfs-api = "0.9.0"
tokio = { version = "0.2", features = ["full"] }
futures = "0.3"
serde = "1.0"
serde_json = "1.0"
clap = "~2.27.0"
